name:           fdb-streaming
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/fdb-streaming#readme>
homepage:       https://github.com/githubuser/fdb-streaming#readme
bug-reports:    https://github.com/githubuser/fdb-streaming/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/fdb-streaming

library
  exposed-modules:
      FDBStreaming,
      FDBStreaming.AggrTable,
      FDBStreaming.Message,
      FDBStreaming.Topic
  other-modules:
      Paths_fdb_streaming
  hs-source-dirs:
      src
  ghc-options: -Wall -g -fno-omit-yields
  build-depends:
      base >=4.7 && <5,
      bytestring,
      containers,
      text,
      binary,
      foundationdb-haskell,
      mtl,
      random,
      async,
      ekg-core,
      clock, unliftio
  default-language: Haskell2010

executable fdb-streaming-writer
  main-is: Main.hs
  other-modules:
      Paths_fdb_streaming
  hs-source-dirs:
      writer
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:
      base >=4.7 && <5
    , async
    , async-extra
    , binary
    , bytestring
    , fdb-streaming
    , foundationdb-haskell
    , optparse-generic
    , stm
    , containers
  default-language: Haskell2010


executable fdb-streaming-reader
  main-is: Main.hs
  other-modules:
      Paths_fdb_streaming
  hs-source-dirs:
      reader
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:
      base >=4.7 && <5
    , async
    , async-extra
    , binary
    , bytestring
    , fdb-streaming
    , foundationdb-haskell
    , optparse-generic
    , stm
    , containers
  default-language: Haskell2010

executable fdb-streaming-highlevel
  main-is: Main.hs
  other-modules:
      Paths_fdb_streaming
  hs-source-dirs:
      highlevel
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
               -Wall
               -g
               -O2
  build-depends:
      base >=4.7 && <5
    , async
    , async-extra
    , binary
    , bytestring
    , fdb-streaming
    , foundationdb-haskell
    , optparse-generic
    , stm
    , containers
    , store
    , unix-time
    , uuid
    , random-bytestring
    , random
    , ekg-core
    , ekg-statsd
    , ekg
    , optparse-generic
    , clock
  default-language: Haskell2010

test-suite fdb-streaming-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_fdb_streaming
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , fdb-streaming
    , hspec
    , foundationdb-haskell
    , containers
  default-language: Haskell2010
