name:           fdb-streaming
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/crclark/fdb-streaming#readme>
homepage:       https://github.com/crclark/fdb-streaming#readme
bug-reports:    https://github.com/crclark/fdb-streaming/issues
author:         Connor Clark
maintainer:     connor.r.clark@gmail.com
copyright:      2018 Connor Clark
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/crclark/fdb-streaming

library
  exposed-modules:
      FDBStreaming,
      FDBStreaming.AggrTable,
      FDBStreaming.Message,
      FDBStreaming.Stream
      FDBStreaming.Stream.Internal,
      FDBStreaming.StreamStep.Internal,
      FDBStreaming.TaskLease,
      FDBStreaming.TaskRegistry,
      FDBStreaming.Testing,
      FDBStreaming.Topic,
      FDBStreaming.Topic.Constants,
      FDBStreaming.JobConfig
      FDBStreaming.Joins,
      FDBStreaming.Util,
      FDBStreaming.Util.BatchWriter,
      FDBStreaming.Watermark,
      FDBStreaming.Push
  other-modules:
      Paths_fdb_streaming
  hs-source-dirs:
      src
  ghc-options: -Wall -g -fno-omit-yields -Wincomplete-uni-patterns
               -Wincomplete-record-updates -Widentities -Wredundant-constraints
               -Wmissing-export-lists -Wmissing-import-lists
               -Wcompat -O2
  build-depends:
      base >=4.7 && <5,
      bytestring,
      deepseq,
      containers,
      text,
      binary,
      foundationdb-haskell,
      mtl,
      random,
      async,
      ekg-core,
      clock,
      unliftio,
      witherable,
      time,
      safe,
      simple-logger,
      stm,
      streamly
  default-language: Haskell2010

executable fdb-streaming-highlevel
  main-is: Main.hs
  other-modules:
      Paths_fdb_streaming
  hs-source-dirs:
      highlevel
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
               -Wall
               -g
               -O2
  build-depends:
      base >=4.7 && <5
    , async
    , async-extra
    , binary
    , bytestring
    , fdb-streaming
    , foundationdb-haskell
    , optparse-generic
    , stm
    , containers
    , persist
    , uuid
    , random-bytestring
    , random
    , ekg-core
    , ekg-statsd
    , ekg
    , optparse-generic
    , clock
    , time
    , text
    , simple-logger
  default-language: Haskell2010

test-suite fdb-streaming-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_fdb_streaming
      Spec.FDBStreaming.TaskLease
      Spec.FDBStreaming.AggrTable
      Spec.FDBStreaming.Watermark
      Spec.FDBStreaming.Util
      Spec.FDBStreaming.Util.BatchWriter
      Spec.FDBStreaming.Topic
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -g
  build-depends:
      base >=4.7 && <5
    , async
    , fdb-streaming
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , foundationdb-haskell
    , containers
    , quickcheck-state-machine >= 0.6.0
    , QuickCheck
    , quickcheck-instances
    -- tree-diff should be re-exported by state machine somewhere, but
    -- can't figure out which module does so.
    , tree-diff
    , safe
    , bytestring
    , uuid
    , text
    , math-functions
    , monoid-statistics
    , persist
    , time
    , uuid
  default-language: Haskell2010
